# EntityMatching

./: .env.example  .gitignore  README.md  dataset.py  docker-compose.yml  finetuning.py  jupyter.Dockerfile  models.py  pyproject.toml  training.py  utils.py
EntityMatchApi/: db.py  demo_app.py  main.py  model.py
datasetcreation/: Cargo.toml
datasetcreation/src/: main.rs
db_setup/: 01-setup_db.sql
diy_tokenizer/: mytokenizer.py
embed_db/: Add_data_to_db.ipynb
load_data/: Add_data_to_db.ipynb
mlx/: dataset.py  embed.py  models.py  utils.py
pytorch/: dataset.py  embed.py  finetuning_bert_multilingual.py  finetuning_bert_multilingual_new_loss.py  models.py  training.py  utils.py
triplet_generator/: Cargo.toml
triplet_generator/src/: main.rs
triplet_miner/src/: main.rs
