[project]
name = "EntityNameMatching"
version = "0.0.1"
description = "Entity name matching experiment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=3.1.1",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.26.1",
]